New icon anims and small fixes

--- a/template/kids.html
+++ b/template/kids.html
@@ -14,11 +14,8 @@
           <div class="article-text">
             <div class="line"></div>
             <h1>ABC&amp;Numbers</h1>
-            <p> ABC&amp;Numbers is the first croatian Windows Phone App with Croatian ABC and Numbers, that was started as an initiative of Microsoft Innovation Center Varazdin and Zvonimir Dimovski, representing the response to lack of quality, interesting and educational Apps in Croatian Language, targeting kids at age 2-5 years. We gathered a team of young, creative individuals, institutions and companies that have contributed to development of the platform for this and a series of edutainment Apps that will follow based on the same creative framework and content. Following people contributed to the development of this App: Hrvoje (Lead Dev), Katarina, Aleksandra and Zvonimir (creative artwork, Colorama), Marin (Music and Sounds, Frikandoo) & Roman (voices & audio production, Totalni FM). <br><br> However, iOS and Android version are currently in testing phase and it will be soon released with lots of updated content. 
-           
-             </p>
-            <a class="frontend-url" href="https://www.microsoft.com/hr-hr/store/games/abc-i-brojevi/9nblgggxxkdt" target="_blank">View website</a>
-            
+            <p> ABC&amp;Numbers is the first croatian Windows Phone App with Croatian ABC and Numbers, that was started as an initiative of Microsoft Innovation Center Varazdin and Zvonimir Dimovski, representing the response to lack of quality, interesting and educational Apps in Croatian Language, targeting kids at age 2-5 years. We gathered a team of young, creative individuals, institutions and companies that have contributed to development of the platform for this and a series of edutainment Apps that will follow based on the same creative framework and content. Following people contributed to the development of this App: Hrvoje (Lead Dev), Katarina, Aleksandra and Zvonimir (creative artwork, Colorama), Marin (Music and Sounds, Frikandoo) & Roman (voices & audio production, Totalni FM).
+             </p>            
           </div>
      </div>
     </article>
