--- a/template/stats.html
+++ b/template/stats.html
@@ -13,9 +13,7 @@
           <div class="article-text">
             <div class="line"></div>
             <h1>UNHCR Statistics</h1>
-            <p>UNHCR Malta during refugee crisis need better solution to show and update their statistical asylum trends. Personel inside UNHCR works mostly with Excel sheets to present data, so our main focus was to transform that excel data into something user friendly and acceptable on the web. As a frontend developer, I implemented Google Charts and with backend developer we set rules to populate Excel sheet which resulted simple to use "upload excel file only" application.</p>
-            <a class="frontend-url" href="http://www.unhcr.org.mt/charts/" target="_blank">View website</a>
-          </div>
+            <p>UNHCR Malta during refugee crisis need better solution to show and update their statistical asylum trends. Personel inside UNHCR works mostly with Excel sheets to present data, so our main focus was to transform that excel data into something user friendly and acceptable on the web. As a frontend developer, I implemented Google Charts and with backend developer we set rules to populate Excel sheet which resulted simple to use "upload excel file only" application.</p>          </div>
      </div>
     </article>
     
