--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,19 @@ body, div, h1, h2, h3, h4, ul, li, p, div {
   padding: 0px;
   font-family: 'Raleway', sans-serif;
 }
+html{
+  position: fixed;
+  height: 100%;
+  overflow: hidden;
+}
 
 body {
-  overflow-x: hidden!important;
   background: rgb(42, 46, 47);
+  width: 100vw;
+  height: 100vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 a {
   -webkit-transition: all 0.2s;
@@ -895,8 +904,28 @@ html.fp-enabled,
 .color-kids {
   background: #7f38a8;
 }
-.misionary-item:hover .logo-placement i {
-  font-size: 120px;
+.misionary-item .fd-boxes > span {
+  transition: all 0.3s ease;
+}
+.misionary-item .fd-boxes > span::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    height: 2px;
+    width: 0;
+    -webkit-transition: width 0.25s, top 0.2s;
+    transition: width 0.2s, top 0.2s;
+    background-color: #111111;
+    z-index: 99999;
+}
+.misionary-item:hover .fd-boxes > span {
+  color: #f3cd85;
+  display: block;
+  position: relative;
+}
+.misionary-item:hover .fd-boxes > span::after {
+  width: 100%;
 }
 .misionary-item:hover .mobile-item {
   display: none;
@@ -1018,6 +1047,18 @@ header {
 	--orange-text-bg: #ee2930;
     --movement-pattern: cubic-bezier(0.0, 0.0, 0.2, 1);
 }
+.fd-boxes {
+  color: var(--white-text);
+  font-weight: bold;
+  font-size: 19px;
+}
+.flex-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
 #section0 {
     height: 100vh;
 }
@@ -1032,6 +1073,7 @@ header {
     text-align: center;
     top: 50%;
     transform: translateY(-55%);
+    overflow: hidden;
 }
 #ninja-svg {
     stroke-dasharray: 1339;
@@ -1359,11 +1401,10 @@ span.red::after {
   background-image: url(/images/skateboarding.jpg);
 }
 .portfolio-header-info h1 {
-  font-size: 50px;
+
   font-weight: 800;
   color: #fff;
   margin-bottom: 10px;
-  text-transform: uppercase;
 }
 .portfolio-header-info h3 {
   color: #fff;
@@ -1386,21 +1427,21 @@ span.red::after {
   cursor: pointer;
 }
 .misionary-item:hover img {
-  -webkit-transform: scale(1.05);
-  -moz-transform: scale(1.05);
-  -ms-transform: scale(1.05);
-  transform: scale(1.05);
+	-webkit-filter: grayscale(100%);
+	filter: grayscale(100%);
 }
 .misionary-item img {
   width: 100%;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease
+  webkit-filter: grayscale(0);
+	filter: grayscale(0);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
 }
 .overlay {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0,0,0,0.5);
   top: 0;
   display: none;
 }
@@ -1734,7 +1775,7 @@ span.red::after {
   position: relative;
   width: 100%;
   background-color: #101010;
-  padding-top: 20vh;
+  padding-top: 10vh;
 }
 .cv-title {
   position: absolute;
@@ -1827,7 +1868,7 @@ span.red::after {
 
 }
 .zvonimir-info {
-  color: #ccc;
+  color: #fff;
   margin-left: 25px;
   padding-top: 15px;
   line-height: 22px;
@@ -1837,11 +1878,12 @@ span.red::after {
   margin-right: 10px;
 }
 .aboutMeText {
-  font-size: 22px;
+  font-size: 21px;
   margin-bottom: 80px;
   color: #5A5A5A;
   padding: 30px 0px 0px 25px;
   margin-top: 30px;
+  line-height: 34px;
 }
 .flex-cv {
   display: -webkit-inline-flex;
@@ -1864,7 +1906,20 @@ span.red::after {
   font-size: 14px;
 }
 .social-contact span {
-  margin-right: 5px;
+  margin-right: 10px;
+}
+.social-contact span a,
+.t-link-color {
+  color: #fff;
+}
+.social-contact span a:hover,
+.t-link-color:hover {
+  color: #fff;
+  opacity: 0.7;
+}
+.t-link-color {
+  text-decoration: underline;
+  font-size: 12px;
 }
 
 /* Tabs */
@@ -2135,7 +2190,7 @@ span.red::after {
     margin-left: 0px;
   }
   .portfolio-header-info h1 {
-    font-size: 60px;
+  
   }
   .webdesign, .frontend, .misc {
     background-size: 100%;
@@ -2211,6 +2266,7 @@ span.red::after {
   }
   .overlay-box h3 {
     font-size: 18px;
+    font-weight: bold;
   }
   .tab-content img {
     width: auto;
@@ -2251,7 +2307,8 @@ span.red::after {
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1920px) {
-    .main-text {
+    .main-text,
+    .portfolio-header-info h1 {
       font-size: calc(30px + 47 * ((100vw - 768px) / 1152 ));
     }
 
@@ -2260,6 +2317,9 @@ span.red::after {
 @media screen and (min-width: 1920px) {
     .main-text {
       font-size: 77px;
+    }
+    .portfolio-header-info h1 {
+      font-size: 50px;
     }
     .konnich {
       width: 1041px;
